[gd_scene load_steps=10 format=3 uid="uid://ufrc13r4er5y"]

[ext_resource type="Script" uid="uid://sjcqmktvs80j" path="res://scripts/final_level.gd" id="1_o4oe4"]
[ext_resource type="Texture2D" uid="uid://djf70ea8wt55s" path="res://assets/world_tileset.png" id="2_wns6o"]
[ext_resource type="Script" uid="uid://ni1mvhrlqstc" path="res://scripts/door.gd" id="3_47a5a"]
[ext_resource type="Texture2D" uid="uid://cnwo8hn31uj6f" path="res://assets/rogueliketilesx3_JoeCreates.png" id="4_7v4ch"]
[ext_resource type="PackedScene" uid="uid://blcivoneh6rvf" path="res://scenes/final_boss.tscn" id="5_y4go8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3k6cr"]
texture = ExtResource("2_wns6o")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_t8881"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_3k6cr")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2rni"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hswhe"]

[node name="final_level" type="Node2D"]
script = ExtResource("1_o4oe4")

[node name="final_walls" type="TileMap" parent="."]
tile_set = SubResource("TileSet_t8881")
format = 2
layer_0/tile_data = PackedInt32Array(0, 393216, 2, 1, 393216, 2, 2, 393216, 2, 3, 393216, 2, 4, 393216, 2, 5, 393216, 2, 6, 393216, 2, 7, 393216, 2, 8, 393216, 2, 9, 393216, 2, 10, 393216, 2, 11, 393216, 2, 12, 393216, 2, 13, 393216, 2, 14, 393216, 2, 15, 393216, 2, 16, 393216, 2, 17, 393216, 2, 18, 393216, 2, 19, 393216, 2, 20, 393216, 2, 21, 393216, 2, 22, 393216, 2, 23, 393216, 2, 24, 393216, 2, 25, 393216, 2, 26, 393216, 2, 27, 393216, 2, 28, 393216, 2, 29, 393216, 2, 30, 393216, 2, 31, 393216, 2, 32, 393216, 2, 33, 393216, 2, 65569, 393216, 2, 131105, 393216, 2, 196641, 393216, 2, 262177, 393216, 2, 327713, 393216, 2, 393249, 393216, 2, 458785, 393216, 2, 524321, 393216, 2, 589857, 393216, 2, 655393, 393216, 2, 720929, 393216, 2, 786465, 393216, 2, 852001, 393216, 2, 917537, 393216, 2, 983073, 393216, 2, 1048609, 393216, 2, 1114145, 393216, 2, 1179681, 393216, 2, 1245217, 393216, 2, 1310753, 393216, 2, 1376289, 393216, 2, 1441825, 393216, 2, 1507361, 393216, 2, 1572897, 393216, 2, 1638433, 393216, 2, 1703969, 393216, 2, 1769505, 393216, 2, 1835041, 393216, 2, 1900577, 393216, 2, 1966113, 393216, 2, 2031649, 393216, 2, 2097185, 393216, 2, 2162721, 393216, 2, 2162720, 393216, 2, 2162719, 393216, 2, 2162718, 393216, 2, 2162717, 393216, 2, 2162716, 393216, 2, 2162715, 393216, 2, 2162714, 393216, 2, 2162713, 393216, 2, 2162712, 393216, 2, 2162711, 393216, 2, 2162710, 393216, 2, 2162709, 393216, 2, 2162708, 393216, 2, 2162707, 393216, 2, 2162706, 393216, 2, 2162705, 393216, 2, 2162704, 393216, 2, 2162703, 393216, 2, 2162702, 393216, 2, 2162701, 393216, 2, 2162700, 393216, 2, 2162699, 393216, 2, 2162698, 393216, 2, 2162697, 393216, 2, 2162696, 393216, 2, 2162695, 393216, 2, 2162694, 393216, 2, 2162693, 393216, 2, 2162692, 393216, 2, 2162691, 393216, 2, 2162690, 393216, 2, 2162689, 393216, 2, 2162688, 393216, 2, 2097152, 393216, 2, 2031616, 393216, 2, 1966080, 393216, 2, 1900544, 393216, 2, 1835008, 393216, 2, 1769472, 393216, 2, 1703936, 393216, 2, 1638400, 393216, 2, 1572864, 393216, 2, 1507328, 393216, 2, 1441792, 393216, 2, 1376256, 393216, 2, 1310720, 393216, 2, 1245184, 393216, 2, 1179648, 393216, 2, 1114112, 393216, 2, 1048576, 393216, 2, 983040, 393216, 2, 917504, 393216, 2, 851968, 393216, 2, 786432, 393216, 2, 720896, 393216, 2, 655360, 393216, 2, 589824, 393216, 2, 524288, 393216, 2, 458752, 393216, 2, 393216, 393216, 2, 327680, 393216, 2, 262144, 393216, 2, 196608, 393216, 2, 131072, 393216, 2, 65536, 393216, 2)

[node name="Door" type="Area2D" parent="."]
position = Vector2(222, 173)
script = ExtResource("3_47a5a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(4, 3)
shape = SubResource("RectangleShape2D_o2rni")

[node name="Sprite2D" type="Sprite2D" parent="Door"]
position = Vector2(4, 3)
texture = ExtResource("4_7v4ch")
region_enabled = true
region_rect = Rect2(77.7966, 0.541828, 21.9258, 23.7919)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(226, 146)

[node name="Exit" type="Area2D" parent="."]
position = Vector2(225, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
shape = SubResource("RectangleShape2D_hswhe")

[node name="Sprite2D" type="Sprite2D" parent="Exit"]
texture = ExtResource("4_7v4ch")
region_enabled = true
region_rect = Rect2(51.6794, 0.670513, 22.8589, 25.6579)

[node name="Label" type="Label" parent="."]
offset_left = 6.0
offset_top = 193.0
offset_right = 46.0
offset_bottom = 216.0
text = "final"

[node name="FinalBoss" parent="." instance=ExtResource("5_y4go8")]
position = Vector2(247.188, 180.153)
